--- a/zelenograd/index.html
+++ b/zelenograd/index.html
@@ -19,7 +19,7 @@
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=0656f73b-e753-48d3-a789-31a5dc9f3442"
 		type="text/javascript"></script>
 
-	<title>Document</title>
+	<title>Зеленоград</title>
 </head>
 
 
