--- a/garden-shop/dev/index.html
+++ b/garden-shop/dev/index.html
@@ -2,7 +2,7 @@
 
 <section class="section">
 	<div class="container">
-		@@include('components/buttons/button-main/button.html',{"class": 'btn-black',"text": 'Кнопка'})
+		<div class="btn">dsdsdsd</div>
 	</div>
 </section>
 
