--- a/garden-shop/release/index.html
+++ b/garden-shop/release/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="css/reset.css" />
 	<link rel="stylesheet" href="css/style-result.css" />
-	<title>@@title</title>
+	<title>Главная</title>
 </head>
 
 <body>
@@ -55,3 +55,24 @@
 			</div>
 		</header>
 		<main class="main">
+
+<section class="section">
+	<div class="container">
+		<div class="btn">dsdsdsd</div>
+	</div>
+</section>
+
+</main>
+<footer class="footer">
+    <div class="container">
+        <div class="footer__wrapper">
+
+        </div>
+    </div>
+</footer>
+</div>
+
+
+</body>
+
+</html>
