--- a/garden-shop/dev/index.html
+++ b/garden-shop/dev/index.html
@@ -1,8 +1,8 @@
 @@include('components/header/header.html',{ "title": "Главная" })
 
-<section class="section">
+<section class="section filler">
 	<div class="container">
-		<div class="btn">dsdsdsd</div>
+
 	</div>
 </section>
 
