--- a/piter-style/index.html
+++ b/piter-style/index.html
@@ -181,7 +181,7 @@
 					<div class="main-page__slider swiper-container">
 						<div class="main-page__slider_wrapper swiper-wrapper">
 							<div class="main-page__slide swiper-slide">
-								<img class="img" src="./img/main.png" alt="main-img">
+								<video src="./video/pst.mp4" loop autoplay></video>
 								<div class="main-page__title title">
 									<div class="h1">Весна – время пробуждения желаний, время предвкушения</div>
 									<div class="p">Впустите весну в свою жизнь – позвольте себе желать!В моде свобода,
@@ -192,7 +192,8 @@
 								</div>
 							</div>
 							<div class="main-page__slide swiper-slide">
-								<img class="img" src="./img/main.png" alt="main-img">
+								<video src="./video/pst.mp4" loop autoplay></video>
+								<!-- <img class="img" src="./img/main.png" alt="main-img"> -->
 								<div class="main-page__title title">
 									<div class="h1">Весна – время пробуждения желаний, время предвкушения</div>
 									<div class="p">Впустите весну в свою жизнь – позвольте себе желать!В моде свобода,
