--- a/garden-shop/dev/catalog.html
+++ b/garden-shop/dev/catalog.html
@@ -8,15 +8,7 @@
 
 @@include('components/tags/tags.html')
 
-<section class="section catalog">
-	<div class="container">
-		<div class="catalog__wrapper">
-			<div class="catalog__filter">
-
-			</div>
-		</div>
-	</div>
-</section>
+@@include('components/catalog/catalog.html')
 
 
 @@include('components/advantages/advantages.html', {title: 'Наши преимущества'})
