--- a/_Components-Library/checkbox/index.html
+++ b/_Components-Library/checkbox/index.html
@@ -1,4 +1,4 @@
-<label class="label__container">One
-	<input type="checkbox" checked="checked">
-	<span class="checkmark"></span>
+<label class="checkbox">One
+	<input class="checkbox__input" type="checkbox" checked="checked">
+	<span class="checkbox__checkmark"></span>
 </label>
