--- a/garden-shop/release/index.html
+++ b/garden-shop/release/index.html
@@ -14,11 +14,13 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/reset.css" />
+	<link rel="stylesheet" href="css/rSlider.min.css" />
 	<link rel="stylesheet" href="css/style-result.css" />
 
 	<script src="https://unpkg.com/imask"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+	<script src="./js/rSlider.min.js"></script>
 	<script src="./js/main-result.js"></script>
 
 	<title>Главная</title>
@@ -2045,11 +2047,11 @@
 <footer class="footer">
     <div class="container">
         <div class="footer__wrapper">
-            <nav class="footer__nav">
-                <ul class="footer__nav-list">
-                    <li class="footer__nav-item footer__nav-item_has-children">
-                        <a class="footer__nav-link footer__nav-link_lvl1" href="">Покупателям</a>
-                        <ul class="footer__subnav">
+            <nav class="footer__nav ">
+                <ul class="footer__nav-list accordion_v1">
+                    <li class="footer__nav-item footer__nav-item_has-children a-container">
+                        <a class="footer__nav-link footer__nav-link_lvl1 a-btn" href="">Покупателям</a>
+                        <ul class="footer__subnav a-panel">
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="#">Минитракторы</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Тракторы</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Мотоблоки</a></li>
@@ -2061,9 +2063,9 @@
                                     учет</a></li>
                         </ul>
                     </li>
-                    <li class="footer__nav-item footer__nav-item_has-children">
-                        <a class="footer__nav-link footer__nav-link_lvl1" href="#">Для бизнеса</a>
-                        <ul class="footer__subnav">
+                    <li class="footer__nav-item footer__nav-item_has-children a-container">
+                        <a class="footer__nav-link footer__nav-link_lvl1 a-btn" href="#">Для бизнеса</a>
+                        <ul class="footer__subnav a-panel">
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Навесное оборудование</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Минитракторы</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Тракторы</a></li>
@@ -2071,9 +2073,9 @@
 
                         </ul>
                     </li>
-                    <li class="footer__nav-item footer__nav-item_has-children">
-                        <a class="footer__nav-link footer__nav-link_lvl1" href="">О компании</a>
-                        <ul class="footer__subnav">
+                    <li class="footer__nav-item footer__nav-item_has-children a-container">
+                        <a class="footer__nav-link footer__nav-link_lvl1 a-btn" href="">О компании</a>
+                        <ul class="footer__subnav a-panel">
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">СКАУТ ТМ</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Франшиза</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Контакты</a></li>
@@ -2083,9 +2085,9 @@
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Видео</a></li>
                         </ul>
                     </li>
-                    <li class="footer__nav-item footer__nav-item_has-children">
-                        <a class="footer__nav-link footer__nav-link_lvl1" href="">Блог</a>
-                        <ul class="footer__subnav">
+                    <li class="footer__nav-item footer__nav-item_has-children a-container">
+                        <a class="footer__nav-link footer__nav-link_lvl1 a-btn" href="">Блог</a>
+                        <ul class="footer__subnav a-panel">
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">СКАУТ ТМ</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Франшиза</a></li>
                             <li><a class="footer__nav-link footer__nav-link_lvl2" href="">Контакты</a></li>
