--- a/_Components-Library/read-more/index.html
+++ b/_Components-Library/read-more/index.html
@@ -1,5 +1,5 @@
 <div class="read-more">
-    <div class="read-more__text">
+    <div class="read-more__text" style="max-height: 275px;">
         Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Lorem ipsum dolor sit amet consectetur adipisicing elit.
