--- a/garden-shop/dev/detail.html
+++ b/garden-shop/dev/detail.html
@@ -1,15 +1,11 @@
 @@include('components/header/header.html',{ "title": "Детальная" })
-
 @@include('components/breadcrumb/breadcrumb.html')
 
 @@include('components/detail-block/detail-block.html')
-
-
+@@include('components/additional/additional.html')
 @@include('components/text-block/text-block.html')
 @@include('components/table-info/table-info.html', {title:'Характеристики Shifeng SF-240В'})
 @@include('components/review/review.html')
-
-
 <section class="section">
 	<div class="container">
 		@@include('components/default-slider/default-slider.html',{title:'Вместо Shifeng SF-240В вы можете купить:'})
