--- a/garden-shop/release/catalog.html
+++ b/garden-shop/release/catalog.html
@@ -711,7 +711,7 @@
                                     </div>
                                     <div class="card__rating-num caption">8</div>
                                 </div>
-                                <div class="card__state card__state_false caption-large">В наличии</div>
+                                <div class="card__state card-state card-state_false caption-large">В наличии</div>
                             </div>
                             <div class="card__main-hash-list gray-text caption">
                                 <div class="card__main-hash">Всем скидки и бонусы!</div>
@@ -815,7 +815,7 @@
             </div>
             <div class="card__rating-num caption">8</div>
         </div>
-        <div class="card__state card__state_false caption-large">В наличии</div>
+        <div class="card__state card-state card-state_false caption-large">В наличии</div>
     </div>
     <div class="card__bot">
         <div class="card__price-wrapper">
@@ -881,7 +881,7 @@
             </div>
             <div class="card__rating-num caption">8</div>
         </div>
-        <div class="card__state card__state_false caption-large">В наличии</div>
+        <div class="card__state card-state card-state_false caption-large">В наличии</div>
     </div>
     <div class="card__bot">
         <div class="card__price-wrapper">
@@ -947,7 +947,7 @@
             </div>
             <div class="card__rating-num caption">8</div>
         </div>
-        <div class="card__state card__state_false caption-large">В наличии</div>
+        <div class="card__state card-state card-state_false caption-large">В наличии</div>
     </div>
     <div class="card__bot">
         <div class="card__price-wrapper">
@@ -1013,7 +1013,7 @@
             </div>
             <div class="card__rating-num caption">8</div>
         </div>
-        <div class="card__state card__state_false caption-large">В наличии</div>
+        <div class="card__state card-state card-state_false caption-large">В наличии</div>
     </div>
     <div class="card__bot">
         <div class="card__price-wrapper">
@@ -1079,7 +1079,7 @@
             </div>
             <div class="card__rating-num caption">8</div>
         </div>
-        <div class="card__state card__state_false caption-large">В наличии</div>
+        <div class="card__state card-state card-state_false caption-large">В наличии</div>
     </div>
     <div class="card__bot">
         <div class="card__price-wrapper">
@@ -1145,7 +1145,7 @@
             </div>
             <div class="card__rating-num caption">8</div>
         </div>
-        <div class="card__state card__state_false caption-large">В наличии</div>
+        <div class="card__state card-state card-state_false caption-large">В наличии</div>
     </div>
     <div class="card__bot">
         <div class="card__price-wrapper">
@@ -1211,7 +1211,7 @@
             </div>
             <div class="card__rating-num caption">8</div>
         </div>
-        <div class="card__state card__state_false caption-large">В наличии</div>
+        <div class="card__state card-state card-state_false caption-large">В наличии</div>
     </div>
     <div class="card__bot">
         <div class="card__price-wrapper">
@@ -1277,7 +1277,7 @@
             </div>
             <div class="card__rating-num caption">8</div>
         </div>
-        <div class="card__state card__state_false caption-large">В наличии</div>
+        <div class="card__state card-state card-state_false caption-large">В наличии</div>
     </div>
     <div class="card__bot">
         <div class="card__price-wrapper">
@@ -1343,7 +1343,7 @@
             </div>
             <div class="card__rating-num caption">8</div>
         </div>
-        <div class="card__state card__state_false caption-large">В наличии</div>
+        <div class="card__state card-state card-state_false caption-large">В наличии</div>
     </div>
     <div class="card__bot">
         <div class="card__price-wrapper">
@@ -1409,7 +1409,7 @@
             </div>
             <div class="card__rating-num caption">8</div>
         </div>
-        <div class="card__state card__state_false caption-large">В наличии</div>
+        <div class="card__state card-state card-state_false caption-large">В наличии</div>
     </div>
     <div class="card__bot">
         <div class="card__price-wrapper">
@@ -1475,7 +1475,7 @@
             </div>
             <div class="card__rating-num caption">8</div>
         </div>
-        <div class="card__state card__state_false caption-large">В наличии</div>
+        <div class="card__state card-state card-state_false caption-large">В наличии</div>
     </div>
     <div class="card__bot">
         <div class="card__price-wrapper">
@@ -1541,7 +1541,7 @@
             </div>
             <div class="card__rating-num caption">8</div>
         </div>
-        <div class="card__state card__state_false caption-large">В наличии</div>
+        <div class="card__state card-state card-state_false caption-large">В наличии</div>
     </div>
     <div class="card__bot">
         <div class="card__price-wrapper">
@@ -1607,7 +1607,7 @@
             </div>
             <div class="card__rating-num caption">8</div>
         </div>
-        <div class="card__state card__state_false caption-large">В наличии</div>
+        <div class="card__state card-state card-state_false caption-large">В наличии</div>
     </div>
     <div class="card__bot">
         <div class="card__price-wrapper">
@@ -1673,7 +1673,7 @@
             </div>
             <div class="card__rating-num caption">8</div>
         </div>
-        <div class="card__state card__state_false caption-large">В наличии</div>
+        <div class="card__state card-state card-state_false caption-large">В наличии</div>
     </div>
     <div class="card__bot">
         <div class="card__price-wrapper">
