--- a/_Components-Library/tab/index.html
+++ b/_Components-Library/tab/index.html
@@ -1,14 +1,14 @@
 <div class=" tab">
     <div class="tab__header-wrapper">
         <div class="tab__header">
-            <div class="tab__link tab__link-active">Title 1</div>
+            <div class="tab__link tab__link_active">Title 1</div>
             <div class="tab__link">Title 2</div>
             <div class="tab__link">Title 3</div>
         </div>
     </div>
 
     <div class=" tab__body">
-        <div class=" tab__item tab__item-active">
+        <div class=" tab__item tab__item_active">
             body 1
         </div>
         <div class=" tab__item ">
