--- a/garden-shop/release/index.html
+++ b/garden-shop/release/index.html
@@ -577,7 +577,7 @@
                                 </div>
                                 <div class="card__rating-num caption">8</div>
                             </div>
-                            <div class="card__state caption-large">В наличии</div>
+                            <div class="card__state card-state caption-large">В наличии</div>
                         </div>
                         <div class="card__bot">
                             <div class="card__price-wrapper">
@@ -628,7 +628,7 @@
                                 </div>
                                 <div class="card__rating-num caption">8</div>
                             </div>
-                            <div class="card__state card__state_false caption-large">Нет в наличии</div>
+                            <div class="card__state card-state card-state_false caption-large">Нет в наличии</div>
                         </div>
                         <div class="card__bot">
                             <div class="card__price-wrapper">
@@ -696,7 +696,7 @@
                                 </div>
                                 <div class="card__rating-num caption">8</div>
                             </div>
-                            <div class="card__state card__state_false caption-large">В наличии</div>
+                            <div class="card__state card-state card-state_false caption-large">В наличии</div>
                         </div>
                         <div class="card__bot">
                             <div class="card__price-wrapper">
@@ -729,7 +729,7 @@
                                 </div>
                                 <div class="card__rating-num caption">8</div>
                             </div>
-                            <div class="card__state card__state_false caption-large">В наличии</div>
+                            <div class="card__state card-state card-state_false caption-large">В наличии</div>
                         </div>
                         <div class="card__bot">
                             <div class="card__price-wrapper">
@@ -762,7 +762,7 @@
                                 </div>
                                 <div class="card__rating-num caption">8</div>
                             </div>
-                            <div class="card__state card__state_false caption-large">В наличии</div>
+                            <div class="card__state card-state card-state_false caption-large">В наличии</div>
                         </div>
                         <div class="card__bot">
                             <div class="card__price-wrapper">
@@ -857,7 +857,8 @@
                                                 </div>
                                                 <div class="card__rating-num caption">8</div>
                                             </div>
-                                            <div class="card__state card__state_false caption-large">В наличии</div>
+                                            <div class="card__state card-state card-state_false caption-large">В наличии
+                                            </div>
                                         </div>
                                         <div class="card__bot">
                                             <div class="card__price-wrapper">
@@ -983,7 +984,7 @@
                                 </div>
                                 <div class="card__rating-num caption">8</div>
                             </div>
-                            <div class="card__state caption-large">В наличии</div>
+                            <div class="card__state card-state caption-large">В наличии</div>
                         </div>
                         <div class="card__bot">
                             <div class="card__price-wrapper">
@@ -1034,7 +1035,7 @@
                                 </div>
                                 <div class="card__rating-num caption">8</div>
                             </div>
-                            <div class="card__state card__state_false caption-large">Нет в наличии</div>
+                            <div class="card__state card-state card-state_false caption-large">Нет в наличии</div>
                         </div>
                         <div class="card__bot">
                             <div class="card__price-wrapper">
@@ -1102,7 +1103,7 @@
                                 </div>
                                 <div class="card__rating-num caption">8</div>
                             </div>
-                            <div class="card__state card__state_false caption-large">В наличии</div>
+                            <div class="card__state card-state card-state_false caption-large">В наличии</div>
                         </div>
                         <div class="card__bot">
                             <div class="card__price-wrapper">
@@ -1135,7 +1136,7 @@
                                 </div>
                                 <div class="card__rating-num caption">8</div>
                             </div>
-                            <div class="card__state card__state_false caption-large">В наличии</div>
+                            <div class="card__state card-state card-state_false caption-large">В наличии</div>
                         </div>
                         <div class="card__bot">
                             <div class="card__price-wrapper">
@@ -1168,7 +1169,7 @@
                                 </div>
                                 <div class="card__rating-num caption">8</div>
                             </div>
-                            <div class="card__state card__state_false caption-large">В наличии</div>
+                            <div class="card__state card-state card-state_false caption-large">В наличии</div>
                         </div>
                         <div class="card__bot">
                             <div class="card__price-wrapper">
@@ -1263,7 +1264,8 @@
                                                 </div>
                                                 <div class="card__rating-num caption">8</div>
                                             </div>
-                                            <div class="card__state card__state_false caption-large">В наличии</div>
+                                            <div class="card__state card-state card-state_false caption-large">В наличии
+                                            </div>
                                         </div>
                                         <div class="card__bot">
                                             <div class="card__price-wrapper">
