--- a/garden-shop/release/catalog.html
+++ b/garden-shop/release/catalog.html
@@ -30,7 +30,7 @@
 	<div class="body-wrapper">
 		<header class="header">
 			<div class="header__line">
-				<img src="../../images/top-banner.png" alt="img">
+				<img src="./images/top-banner.png" alt="img">
 			</div>
 			<div class="container">
 				<div class="header__wrapper">
@@ -827,7 +827,7 @@
             </div>
             <div class="card__old-price caption">369 900 ₽</div>
         </div>
-        <div class="card__basket"></div>
+        <div class="card__basket card-basket"></div>
     </div>
 </div>
                     <div class="card">
@@ -893,7 +893,7 @@
             </div>
             <div class="card__old-price caption">369 900 ₽</div>
         </div>
-        <div class="card__basket"></div>
+        <div class="card__basket card-basket"></div>
     </div>
 </div>
                     <div class="card">
@@ -959,7 +959,7 @@
             </div>
             <div class="card__old-price caption">369 900 ₽</div>
         </div>
-        <div class="card__basket"></div>
+        <div class="card__basket card-basket"></div>
     </div>
 </div>
                     <div class="card">
@@ -1025,7 +1025,7 @@
             </div>
             <div class="card__old-price caption">369 900 ₽</div>
         </div>
-        <div class="card__basket"></div>
+        <div class="card__basket card-basket"></div>
     </div>
 </div>
                     <div class="card">
@@ -1091,7 +1091,7 @@
             </div>
             <div class="card__old-price caption">369 900 ₽</div>
         </div>
-        <div class="card__basket"></div>
+        <div class="card__basket card-basket"></div>
     </div>
 </div>
                     <div class="card">
@@ -1157,7 +1157,7 @@
             </div>
             <div class="card__old-price caption">369 900 ₽</div>
         </div>
-        <div class="card__basket"></div>
+        <div class="card__basket card-basket"></div>
     </div>
 </div>
                     <div class="card">
@@ -1223,7 +1223,7 @@
             </div>
             <div class="card__old-price caption">369 900 ₽</div>
         </div>
-        <div class="card__basket"></div>
+        <div class="card__basket card-basket"></div>
     </div>
 </div>
                     <div class="card">
@@ -1289,7 +1289,7 @@
             </div>
             <div class="card__old-price caption">369 900 ₽</div>
         </div>
-        <div class="card__basket"></div>
+        <div class="card__basket card-basket"></div>
     </div>
 </div>
                     <div class="card">
@@ -1355,7 +1355,7 @@
             </div>
             <div class="card__old-price caption">369 900 ₽</div>
         </div>
-        <div class="card__basket"></div>
+        <div class="card__basket card-basket"></div>
     </div>
 </div>
                     <div class="card">
@@ -1421,7 +1421,7 @@
             </div>
             <div class="card__old-price caption">369 900 ₽</div>
         </div>
-        <div class="card__basket"></div>
+        <div class="card__basket card-basket"></div>
     </div>
 </div>
                     <div class="card">
@@ -1487,7 +1487,7 @@
             </div>
             <div class="card__old-price caption">369 900 ₽</div>
         </div>
-        <div class="card__basket"></div>
+        <div class="card__basket card-basket"></div>
     </div>
 </div>
                     <div class="card">
@@ -1553,7 +1553,7 @@
             </div>
             <div class="card__old-price caption">369 900 ₽</div>
         </div>
-        <div class="card__basket"></div>
+        <div class="card__basket card-basket"></div>
     </div>
 </div>
                     <div class="card">
@@ -1619,7 +1619,7 @@
             </div>
             <div class="card__old-price caption">369 900 ₽</div>
         </div>
-        <div class="card__basket"></div>
+        <div class="card__basket card-basket"></div>
     </div>
 </div>
                     <div class="card">
@@ -1685,7 +1685,7 @@
             </div>
             <div class="card__old-price caption">369 900 ₽</div>
         </div>
-        <div class="card__basket"></div>
+        <div class="card__basket card-basket"></div>
     </div>
 </div>
                 </div>
