--- a/garden-shop/release/index.html
+++ b/garden-shop/release/index.html
@@ -30,7 +30,7 @@
 	<div class="body-wrapper">
 		<header class="header">
 			<div class="header__line">
-				<img src="../../images/top-banner.png" alt="img">
+				<img src="./images/top-banner.png" alt="img">
 			</div>
 			<div class="container">
 				<div class="header__wrapper">
@@ -589,7 +589,7 @@
                                 </div>
                                 <div class="card__old-price caption">369 900 ₽</div>
                             </div>
-                            <div class="card__basket"></div>
+                            <div class="card__basket card-basket"></div>
                         </div>
                     </div>
                 </div>
@@ -640,7 +640,7 @@
                                 </div>
                                 <div class="card__old-price caption">369 900 ₽</div>
                             </div>
-                            <div class="card__basket"></div>
+                            <div class="card__basket card-basket"></div>
                         </div>
                     </div>
                 </div>
@@ -708,7 +708,7 @@
                                 </div>
                                 <div class="card__old-price caption">369 900 ₽</div>
                             </div>
-                            <div class="card__basket"></div>
+                            <div class="card__basket card-basket"></div>
                         </div>
                     </div>
                 </div>
@@ -741,7 +741,7 @@
                                 </div>
                                 <div class="card__old-price caption">369 900 ₽</div>
                             </div>
-                            <div class="card__basket"></div>
+                            <div class="card__basket card-basket"></div>
                         </div>
                     </div>
                 </div>
@@ -774,7 +774,7 @@
                                 </div>
                                 <div class="card__old-price caption">369 900 ₽</div>
                             </div>
-                            <div class="card__basket"></div>
+                            <div class="card__basket card-basket"></div>
                         </div>
                     </div>
                 </div>
@@ -870,7 +870,7 @@
                                                 </div>
                                                 <div class="card__old-price caption">369 900 ₽</div>
                                             </div>
-                                            <!-- <div class="card__basket"></div> -->
+                                            <!-- <div class="card__basket card-basket"></div> -->
                                         </div>
                                     </div>
                                 </div>
@@ -996,7 +996,7 @@
                                 </div>
                                 <div class="card__old-price caption">369 900 ₽</div>
                             </div>
-                            <div class="card__basket"></div>
+                            <div class="card__basket card-basket"></div>
                         </div>
                     </div>
                 </div>
@@ -1047,7 +1047,7 @@
                                 </div>
                                 <div class="card__old-price caption">369 900 ₽</div>
                             </div>
-                            <div class="card__basket"></div>
+                            <div class="card__basket card-basket"></div>
                         </div>
                     </div>
                 </div>
@@ -1115,7 +1115,7 @@
                                 </div>
                                 <div class="card__old-price caption">369 900 ₽</div>
                             </div>
-                            <div class="card__basket"></div>
+                            <div class="card__basket card-basket"></div>
                         </div>
                     </div>
                 </div>
@@ -1148,7 +1148,7 @@
                                 </div>
                                 <div class="card__old-price caption">369 900 ₽</div>
                             </div>
-                            <div class="card__basket"></div>
+                            <div class="card__basket card-basket"></div>
                         </div>
                     </div>
                 </div>
@@ -1181,7 +1181,7 @@
                                 </div>
                                 <div class="card__old-price caption">369 900 ₽</div>
                             </div>
-                            <div class="card__basket"></div>
+                            <div class="card__basket card-basket"></div>
                         </div>
                     </div>
                 </div>
@@ -1277,7 +1277,7 @@
                                                 </div>
                                                 <div class="card__old-price caption">369 900 ₽</div>
                                             </div>
-                                            <!-- <div class="card__basket"></div> -->
+                                            <!-- <div class="card__basket card-basket"></div> -->
                                         </div>
                                     </div>
                                 </div>
