--- a/garden-shop/release/catalog-list.html
+++ b/garden-shop/release/catalog-list.html
@@ -1251,7 +1251,7 @@
                     <div class="line-form__info-title subtitle">Какой трактор нужен именно вам?</div>
                     <div class="line-form__info-text">Наш тест поможет в выборе оборудования</div>
                 </div>
-                <a href="" class="line-form__btn btn">Пройти тест</a>
+                <a href="#popup-quiz" data-fancybox class="line-form__btn btn">Пройти тест</a>
             </div>
             <form class="line-form__item line-form__form orange-bg ">
                 <div class="line-form__title white-text subtitle">Узнайте о новостях и скидках первыми</div>
@@ -1431,6 +1431,182 @@
         данных в соответствии с политикой конфиденциальности
     </div>
     <div class="popup-info__close"></div>
+</div>
+
+<div class="popup" id="popup-quiz">
+    <div class="popup__title orange-bg white-text demibold">Подбор трактора</div>
+    <div class="popup__body">
+        <form class="quiz">
+    <div class="quiz__body">
+        <div class="quiz__stages">
+            <div class="quiz__stage quiz__stage_active">
+                <div class="quiz__title demibold">Планируете передвигаться по дорогам общего пользования?</div>
+                <div class="quiz__range">
+                    <div class="quiz__range-slider">
+                        <div class="range-slider" data-limits="10000, 1000000" data-step="10000" data-unit=" ₽">
+                            <div class="range-slider__limits">
+                                <div class="range-slider__input-wrapper" data-before="до">
+                                    <input type="text"
+                                        class="range-slider__input range-slider__input_max input demibold">
+                                </div>
+                            </div>
+                            <div class="range-slider__wrapper">
+                                <input class="range-slider__slider" type="text">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="quiz__stage ">
+                <div class="quiz__title demibold">Планируете передвигаться по дорогам общего пользования?</div>
+                <div class="quiz__stage-content quiz__radio-list">
+                    <label class="radio quiz__radio">Да
+                        <input class="radio__input" type="radio" name="stage-1" value="Да">
+                        <span class="radio__checkmark"></span>
+                    </label>
+                    <label class="radio quiz__radio">Нет
+                        <input class="radio__input" type="radio" name="stage-1" value="Нет">
+                        <span class="radio__checkmark"></span>
+                    </label>
+                    <label class="radio quiz__radio">Пока не планирую, но в будущем возможно
+                        <input class="radio__input" type="radio" name="stage-1"
+                            value="Пока не планирую, но в будущем возможно">
+                        <span class="radio__checkmark"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="quiz__stage">
+                <div class="quiz__title demibold">Планируете передвигаться по дорогам общего пользования?</div>
+                <div class="quiz__stage-content quiz__checkbox-list">
+                    <label class="quiz__checkbox checkbox">Вспашка почвы
+                        <input class="checkbox__input" type="checkbox" name="stage-2" value="Вспашка почвы">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                    <label class="quiz__checkbox checkbox">
+                        Поверхностная обработка Поверхностная обработка Поверхностная обработка
+                        <input class="checkbox__input" type="checkbox" name="stage-2"
+                            value="Поверхностная обработка Поверхностная обработка Поверхностная обработка">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                    <label class="quiz__checkbox checkbox">Посадка картофеля
+                        <input class="checkbox__input" type="checkbox" name="stage-2" value="Посадка картофеля">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                    <label class="quiz__checkbox checkbox">Вспашка почвы
+                        <input class="checkbox__input" type="checkbox" name="stage-2" value="Вспашка почвы">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                    <label class="quiz__checkbox checkbox">Поверхностная обработка
+                        <input class="checkbox__input" type="checkbox" name="stage-2" value="Поверхностная обработка">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                    <label class="quiz__checkbox checkbox">Вспашка почвы
+                        <input class="checkbox__input" type="checkbox" name="stage-2" value="Вспашка почвы">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                    <label class="quiz__checkbox checkbox">
+                        Поверхностная обработка Поверхностная обработка Поверхностная обработка
+                        <input class="checkbox__input" type="checkbox" name="stage-2"
+                            value="Поверхностная обработка Поверхностная обработка Поверхностная обработка">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                    <label class="quiz__checkbox checkbox">Посадка картофеля
+                        <input class="checkbox__input" type="checkbox" name="stage-2" value="Посадка картофеля">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                    <label class="quiz__checkbox checkbox">Вспашка почвы
+                        <input class="checkbox__input" type="checkbox" name="stage-2" value="Вспашка почвы">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                    <label class="quiz__checkbox checkbox">Поверхностная обработка
+                        <input class="checkbox__input" type="checkbox" name="stage-2" value="Поверхностная обработка">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                    <label class="quiz__checkbox checkbox">Посадка картофеля
+                        <input class="checkbox__input" type="checkbox" name="stage-2" value="Посадка картофеля">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                    <label class="quiz__checkbox checkbox">Вспашка почвы
+                        <input class="checkbox__input" type="checkbox" name="stage-2" value="Вспашка почвы">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                    <label class="quiz__checkbox checkbox">Поверхностная обработка
+                        <input class="checkbox__input" type="checkbox" name="stage-2" value="Поверхностная обработка">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                    <label class="quiz__checkbox checkbox">Посадка картофеля
+                        <input class="checkbox__input" type="checkbox" name="stage-2" value="Посадка картофеля">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                    <label class="quiz__checkbox checkbox">Вспашка почвы
+                        <input class="checkbox__input" type="checkbox" name="stage-2" value="Вспашка почвы">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                    <label class="quiz__checkbox checkbox">Поверхностная обработка
+                        <input class="checkbox__input" type="checkbox" name="stage-2" value="Поверхностная обработка">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                    <label class="quiz__checkbox checkbox">Посадка картофеля
+                        <input class="checkbox__input" type="checkbox" name="stage-2" value="Посадка картофеля">
+                        <span class="checkbox__checkmark"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="quiz__stage">
+                <div class="quiz__title demibold">Планируете передвигаться по дорогам общего пользования?</div>
+                <div class="quiz__stage-content quiz__input-list">
+                    <div class="input">
+                        <input type="text" class="input__field" placeholder="Имя" required>
+                    </div>
+                    <div class="input">
+                        <input type="tel" class="input__field" placeholder="+7 (" required>
+                    </div>
+                    <div class="input">
+                        <input type="email" class="input__field" placeholder="E-mail">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="quiz__discount">
+            <div class="quiz__discount-total">
+                <div class="quiz__discount-total-text">
+                    Ваша скидка
+                </div>
+                <div class="quiz__discount-total-num">2 000 ₽</div>
+            </div>
+            <div class="quiz__discount-bar">
+                <div class="quiz__discount-item quiz__discount-item_active">
+                    -<span>2 000 ₽</span>
+                </div>
+                <div class="quiz__discount-item">
+                    -<span>4 000 ₽</span>
+                </div>
+                <div class="quiz__discount-item">
+                    -<span>6 000 ₽</span>
+                </div>
+                <div class="quiz__discount-item">
+                    -<span>11 000 ₽</span>
+                </div>
+                <div class="quiz__discount-item ">
+                    -<span>16 000 ₽</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="quiz__bottom">
+        <div class="quiz__progress">
+            <div class="quiz__progress-title caption gray-text"> Готово: <span>0%</span></div>
+            <div class="quiz__progress-bar">
+                <div class="quiz__progress-fill"></div>
+            </div>
+        </div>
+        <div class="quiz__btns">
+            <div class="quiz__btn quiz__prev quiz__btn_remove"></div>
+            <div class="quiz__btn quiz__next quiz__btn_disable btn">Далее</div>
+        </div>
+    </div>
+</form>
+    </div>
 </div>
 
 </body>
