--- a/checkmate/index.html
+++ b/checkmate/index.html
@@ -49,7 +49,7 @@
 					<a href="/" class="header__logo">
 						<img src="./img/logo.svg" alt="logo">
 					</a>
-					<div class="header__btn btn">Получить консультацию</div>
+					<a href="#form" class="header__btn btn anchor">Получить консультацию</a>
 					<div class="header__mobile">
 						<a href="tel:" class="header__phone">
 							<svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -76,7 +76,7 @@
 								до <span class="bold">50 000 ₽</span>
 							</div>
 							<div class="home-block__desc light-text">*в зависимости от плана и анализа проблемы</div>
-							<div class="home-block__btn btn">Получить консультацию</div>
+							<a href="#form" class="home-block__btn btn anchor">Получить консультацию</a>
 						</div>
 						<div class="home-block__info light-text">
 							<div class="home-block__person-photo">
@@ -395,7 +395,7 @@
 				</div>
 			</section>
 
-			<section class="section article">
+			<!-- <section class="section article">
 				<div class="container">
 					<div class="article__title title brown-text">Статьи</div>
 					<div class="artcile__wrapper">
@@ -438,7 +438,7 @@
 					</div>
 					<a href="" class="show-all-link ">Все статьи</a>
 				</div>
-			</section>
+			</section> -->
 
 			<section class="section cert">
 				<div class="container">
@@ -484,6 +484,7 @@
 								</div>
 							</a>
 						</div>
+						<div class="cert__pagination slider-pagination"></div>
 						<div class="cert__navigation slider-navigation">
 							<div class="cert__prev slider-prev"></div>
 							<div class="cert__next slider-next"></div>
@@ -548,13 +549,18 @@
 								</div>
 							</div>
 						</div>
+						<div class="partners__navigation slider-navigation">
+							<div class="partners__prev slider-prev"></div>
+							<div class="partners__next slider-next"></div>
+						</div>
+						<div class="partners__pagination slider-pagination"></div>
 					</div>
 				</div>
 			</section>
 
 			<section class="section map" id="map"></section>
 
-			<section class="section form">
+			<section class="section form" id="form">
 				<div class="container">
 					<div class="form__title title brown-text">Напишите нам</div>
 					<div class="form__wrapper">
