--- a/checkmate/index.html
+++ b/checkmate/index.html
@@ -354,7 +354,7 @@
 									<div class="review__photo">
 										<img src="./img/review.png" alt="photo">
 									</div>
-									<div class="review__navigaTION __name subtitle">Васильева Анна</div>
+									<div class="review__name subtitle">Васильева Анна</div>
 									<div class="review__content">
 										Очень благодарна юридической компании Шах и Мат за хорошую работу и человеческое
 										отношение! Пока шло дело по разделу имущества, я получала поддержку и дельные
@@ -368,7 +368,7 @@
 									<div class="review__photo">
 										<img src="./img/review.png" alt="photo">
 									</div>
-									<div class="review__navigaTION __name subtitle">Васильева Анна</div>
+									<div class="review__name subtitle">Васильева Анна</div>
 									<div class="review__content">
 										Очень благодарна юридической компании Шах и Мат за хорошую работу и человеческое
 										отношение! Пока шло дело по разделу имущества, я получала поддержку и дельные
