--- a/garden-shop/dev/cabinet.html
+++ b/garden-shop/dev/cabinet.html
@@ -1,4 +1,4 @@
-@@include('components/header/header.html',{ "title": "Каталог" })
+@@include('components/header/header.html',{ "title": "Личный кабинет" })
 
 @@include('components/breadcrumb/breadcrumb.html')
 
@@ -6,45 +6,60 @@
 <section class="section block-with-sidebar">
 	<div class="container">
 		<div class="block-with-sidebar__wrapper">
-			<nav class="sidebar">
-				<ul class="sidebar__list">
-					<li class="sidebar__item">
-						<a href="" class="sidebar__link">
-							<span class="sidebar__link-icon"
-								style="-webkit-mask-image:url('./images/icons/cabinet-1.svg')"></span>
-							Личный кабинет
-						</a>
-					</li>
-					<li class="sidebar__item">
-						<a href="" class="sidebar__link">
-							<span class="sidebar__link-icon"
-								style="-webkit-mask-image:url('./images/icons/cabinet-2.svg')"></span>
-							Заказы
-						</a>
-					</li>
-					<li class="sidebar__item">
-						<a href="" class="sidebar__link">
-							<span class="sidebar__link-icon"
-								style="-webkit-mask-image:url('./images/icons/cabinet-3.svg')"></span>
-							Избранное
-						</a>
-					</li>
-					<li class="sidebar__item">
-						<a href="" class="sidebar__link">
-							<span class="sidebar__link-icon"
-								style="-webkit-mask-image:url('./images/icons/cabinet-4.svg')"></span>
-							Техподдержка
-						</a>
-					</li>
-					<li class="sidebar__item">
-						<a href="" class="sidebar__link">
-							<span class="sidebar__link-icon"
-								style="-webkit-mask-image:url('./images/icons/cabinet-5.svg')"></span>
-							Мой трактор
-						</a>
-					</li>
-				</ul>
-			</nav>
+			<div class="dropdown dropdown_sidebar">
+				<div class="dropdown__title">
+					<div class="dropdown__title-text">Личный кабинет</div>
+					<div class="dropdown__caret">
+						<svg width="20" height="20" viewBox="0 0 20 20" fill="none"
+							xmlns="http://www.w3.org/2000/svg">
+							<path d="M13.3327 8.33331L9.99935 11.6666L6.66602 8.33331" stroke="#3F3F3F"
+								stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+						</svg>
+					</div>
+				</div>
+				<div class="dropdown__list">
+					<nav class="sidebar">
+						<ul class="sidebar__list">
+							<li class="dropdown__item sidebar__item">
+								<a href="" class="sidebar__link">
+									<span class="sidebar__link-icon"
+										style="-webkit-mask-image:url('./images/icons/cabinet-1.svg')"></span>
+									Личный кабинет
+								</a>
+							</li>
+							<li class="dropdown__item sidebar__item">
+								<a href="" class="sidebar__link">
+									<span class="sidebar__link-icon"
+										style="-webkit-mask-image:url('./images/icons/cabinet-2.svg')"></span>
+									Заказы
+								</a>
+							</li>
+							<li class="dropdown__item sidebar__item">
+								<a href="" class="sidebar__link">
+									<span class="sidebar__link-icon"
+										style="-webkit-mask-image:url('./images/icons/cabinet-3.svg')"></span>
+									Избранное
+								</a>
+							</li>
+							<li class="dropdown__item sidebar__item">
+								<a href="" class="sidebar__link">
+									<span class="sidebar__link-icon"
+										style="-webkit-mask-image:url('./images/icons/cabinet-4.svg')"></span>
+									Техподдержка
+								</a>
+							</li>
+							<li class="dropdown__item sidebar__item">
+								<a href="" class="sidebar__link">
+									<span class="sidebar__link-icon"
+										style="-webkit-mask-image:url('./images/icons/cabinet-5.svg')"></span>
+									Мой трактор
+								</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+
 			@@include('components/cabinet/cabinet.html',{})
 		</div>
 	</div>
