--- a/garden-shop/release/sale.html
+++ b/garden-shop/release/sale.html
@@ -1245,7 +1245,7 @@
                 Введите новую почту
             </div>
             <div class="input mb-10">
-                <input type="tel" class="input__field" placeholder="user@garden-shop.ru">
+                <input type="email" class="input__field" placeholder="user@garden-shop.ru">
             </div>
 
             <div class="gray-text mb-20 caption">
@@ -1255,6 +1255,83 @@
             <div class="popup__btns">
                 <div data-fancybox-close class="btn btn_fill btn_transparent">Отмена</div>
                 <input type="submit" class="btn btn_fill" value="Сохранить">
+            </div>
+        </form>
+    </div>
+</div>
+
+<div class="popup popup_content" id="popup-pass">
+    <div class="popup__title orange-bg white-text demibold">Восстановить пароль</div>
+    <div class="popup__body">
+        <form action="">
+            <div class="mb-10 demibold">
+                Главное - безопасность
+            </div>
+            <div class="mb-10">
+                Укажите почту от вашего аккаунта, а мы пришлем письмо с ссылкой для восстановления пароля!
+            </div>
+            <div class="input mb-20">
+                <input type="email" class="input__field" placeholder="Электронная почта">
+            </div>
+
+            <div class="popup__btns mb-10">
+                <input type="submit" class="btn btn_fill" value="Отправить код">
+            </div>
+            <a href="" class="orange-text caption-large">Вспомнили пароль?</a>
+        </form>
+    </div>
+</div>
+
+<div class="popup popup_content" id="popup-reg">
+    <div class="popup__title orange-bg white-text demibold">Регистрация</div>
+    <div class="popup__body">
+        <form action="">
+            <div class="input mb-10">
+                <input type="email" class="input__field" placeholder="Электронная почта">
+            </div>
+
+            <div class="input mb-10">
+                <input type="password" class="input__field" placeholder="Пароль">
+                <div class="input__pass-toggle"></div>
+            </div>
+
+            <div class="input mb-20">
+                <input type="password" class="input__field" placeholder="Повторите пароль">
+                <div class="input__pass-toggle"></div>
+            </div>
+
+            <div class="popup__btns mb-10">
+                <input type="submit" class="btn btn_fill" value="Создать аккаунт">
+            </div>
+            <a href="" class="orange-text caption-large">Уже есть аккаунт?</a>
+        </form>
+    </div>
+</div>
+
+<div class="popup popup_content" id="popup-login">
+    <div class="popup__title orange-bg white-text demibold">Войти в аккаунт</div>
+    <div class="popup__body">
+        <form action="">
+            <div class="input mb-10">
+                <input type="email" class="input__field" placeholder="Электронная почта">
+            </div>
+
+            <div class="input mb-10">
+                <input type="password" class="input__field" placeholder="Пароль">
+                <div class="input__pass-toggle"></div>
+            </div>
+
+            <div class="input mb-20">
+                <input type="password" class="input__field" placeholder="Повторите пароль">
+                <div class="input__pass-toggle"></div>
+            </div>
+
+            <div class="popup__btns mb-10">
+                <input type="submit" class="btn btn_fill" value="Войти в аккаунт">
+            </div>
+            <div class="popup__links">
+                <a href="" class="orange-text caption-large">Еще нет аккаунта?</a>
+                <a href="" class="orange-text caption-large">Забыли пароль?</a>
             </div>
         </form>
     </div>
