--- a/garden-shop/release/order.html
+++ b/garden-shop/release/order.html
@@ -11,9 +11,6 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="favicon.png" />
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
-	<script src="https://code.jquery.com/jquery-3.7.0.js"
-		integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
-	<script src='https://unpkg.com/spritespin@x.x.x/release/spritespin.js' type='text/javascript'></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/vanilla-calendar.min.css" />
@@ -22,9 +19,12 @@
 	<link rel="stylesheet" href="css/style-result.css" />
 
 
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=0656f73b-e753-48d3-a789-31a5dc9f3442"
+		type="text/javascript"></script>
+
 	<script src="https://code.jquery.com/jquery-3.7.0.js"
 		integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
-	<sc ript src='https://unpkg.com/spritespin@x.x.x/release/spritespin.js' type='text/javascript'></sc ript>
+	<script src='https://unpkg.com/spritespin@x.x.x/release/spritespin.js' type='text/javascript'></script>
 	<script src="./js/vanilla-calendar.min.js"></script>
 	<script src="https://unpkg.com/imask"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
@@ -1886,6 +1886,21 @@
                 <a href="" class="orange-text caption-large">Забыли пароль?</a>
             </div>
         </form>
+    </div>
+</div>
+
+
+<div class="popup popup_content" id="popup-text">
+    <div class="popup__title orange-bg white-text demibold">Как доехать в Санкт-Петербурге</div>
+    <div class="popup__body content">
+        <p>
+            Склад и офис продаж находится в 15 минутах езды на машине от метро Парнас. Съезд с Шоссейной улицы на
+            Торговую.
+        </p>
+        <p>
+            Также от метро Парнас можно добраться на общественном транспорте: доехать на 148 автобусе до ТЦ Мега Парнас
+            и пройтись 10 минут.
+        </p>
     </div>
 </div>
 
